experiment_output/error_log/nondex-arma73-library_store.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task269/wd/NonDex-plugin-test/github.com/arma73/library_store/src/main/java/com/librarystore/library/dao/impl/BookService.java:51: error: cannot find symbol
            bookRepository.updateContent(entity.getContent(), book.getId());
                                                              ^
  symbol:   variable book
  location: class BookService
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task269/wd/NonDex-plugin-test/github.com/arma73/library_store/src/main/java/com/librarystore/library/dao/impl/BookService.java:68: error: incompatible types: String cannot be converted to List<String>
        return bookRepository.findByNameContainingIgnoreCaseOrAuthorFioContainingIgnoreCaseOrderByName(searchString[0], searchString[0], new PageRequest(pageNumber, pageSize, new Sort(sortDirection, sortField)));
                                                                                                                                                                                                       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task269/wd/NonDex-plugin-test/github.com/arma73/library_store/src/main/java/com/librarystore/library/dao/impl/BookService.java:68: error: method findByNameContainingIgnoreCaseOrAuthorFioContainingIgnoreCaseOrderByName in interface BookRepository cannot be applied to given types;
        return bookRepository.findByNameContainingIgnoreCaseOrAuthorFioContainingIgnoreCaseOrderByName(searchString[0], searchString[0], new PageRequest(pageNumber, pageSize, new Sort(sortDirection, sortField)));
                             ^
  required: String,String
  found: String,String,PageRequest
  reason: actual and formal argument lists differ in length
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 16s
